--- a/src/main/resources/assets/flyn_resource_gen/lang/en_us.json
+++ b/src/main/resources/assets/flyn_resource_gen/lang/en_us.json
@@ -1,5 +1,5 @@
 {
   "block.flyn_resource_gen.resource_gen_block": "Resource Gen",
   "item.flyn_resource_gen.resource_gen_block": "Resource Gen",
-  "itemGroup.main_tab": "Flyn Resource Gen"
+  "itempGroup.flyn_resource_gen": "Flyn Resource Gen"
 }
