2024-12-21 display the different name according to the property

--- a/src/main/resources/assets/flyn_resource_gen/lang/en_us.json
+++ b/src/main/resources/assets/flyn_resource_gen/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.flyn_resource_gen.resource_gen_block": "Resource Gen",
   "item.flyn_resource_gen.resource_gen_block": "Resource Gen",
+  "item.flyn_resource_gen.resource_gen_block_variant": "%s Gen Tier %s",
   "itempGroup.flyn_resource_gen": "Flyn Resource Gen"
 }
